// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RxInject is instantiable with Factory abd props function 1`] = `
<Inject>
  <NumberComp
    number={666}
  >
    <span>
      666
    </span>
  </NumberComp>
</Inject>
`

exports[`RxInject is instantiable with Factory and class component 1`] = `
<Inject>
  <NumberComp2
    number={1337}
  >
    <span>
      1337
    </span>
  </NumberComp2>
</Inject>
`

exports[`RxInject is instantiable with Observable 1`] = `
<Inject>
  <NumberComp
    number={2}
  >
    <span>
      2
    </span>
  </NumberComp>
</Inject>
`

exports[`RxInject is instantiable with Observable 2`] = `
<Inject>
  <NumberComp
    number={42}
  >
    <span>
      42
    </span>
  </NumberComp>
</Inject>
`

exports[`RxInject is instantiable with props object 1`] = `
<Inject>
  <NumberComp
    number={5000}
  >
    <span>
      5000
    </span>
  </NumberComp>
</Inject>
`

exports[`render should render component 1`] = `
<hello
  n={1}
>
  <span>
    1
  </span>
</hello>
`
